# charm-json

./: pyproject.toml
charm_json/: _main.py
